@@ -1580,7 +1580,8 @@ class Response(object):
     app_iter = property(_app_iter__get, _app_iter__set, _app_iter__del, doc=_app_iter__get.__doc__)
 
     def set_cookie(self, key, value='', max_age=None,
-                   path='/', domain=None, secure=None, httponly=False):
+                   path='/', domain=None, secure=None, httponly=False,
+                   version=None, comment=None):
         """
         Set (add) a cookie for the response
         """
@@ -1592,6 +1593,8 @@ class Response(object):
             ('domain', domain),
             ('secure', secure),
             ('HttpOnly', httponly),
+            ('version', version),
+            ('comment', comment),
             ]:
             if var_value is not None and var_value is not False:
                 cookies[key][var_name.replace('_', '-')] = str(var_value)
